Convert project to create-react-app for simplicity

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -19,51 +19,77 @@ SIZE GUIDE
 
 */
 
-html, body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font: normal 100% sans-serif;
+html,
+body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    color: rgb(25, 25, 25);
+  color: rgb(25, 25, 25);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-button, input, textarea {
-    font-family: sans-serif;
+button,
+input,
+textarea {
+  font-family: sans-serif;
 }
 
 button {
-    border: 0;
-    background: transparent;
-    color: inherit;
-    font-size: 1em;
-    line-height: 1em;
+  border: 0;
+  background: transparent;
+  color: inherit;
+  font-size: 1em;
+  line-height: 1em;
 }
 
-address, dd, dt, h1, h2, h3, h4, h5, h6, figure, figcaption, li, p, ul, ol {
-    margin: 0;
-    padding: 0;
-    font-size: 1em;
-    font-style: normal;
-    font-weight: inherit;
-    line-height: inherit;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-address, ol, p, ul {
-    margin-top: 1.5em;
-    line-height: 1.5em;
+address,
+dd,
+dt,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+figure,
+figcaption,
+li,
+p,
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: inherit;
+  line-height: inherit;
+}
+
+address,
+ol,
+p,
+ul {
+  margin-top: 1.5em;
+  line-height: 1.5em;
 }
 
 li {
-    margin-left: 1.5em;
+  margin-left: 1.5em;
 }
 
 .hitarea {
-    cursor: pointer;
-    display: block;
+  cursor: pointer;
+  display: block;
 }
