--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,35 +1,34 @@
-
 body {
-    font: 400 1em/1.5em 'MS PGothic', 'Osaka', sans-serif;
-    text-align: center;
+  font: 400 1em/1.5em "MS PGothic", "Osaka", sans-serif;
+  text-align: center;
 }
 
 #layout {
-    width: 640px;
-    margin: 3em auto 0;
-    text-align: center;
+  width: 640px;
+  margin: 3em auto 0;
+  text-align: center;
 }
 
 #header {
-    margin: 4em 0;
+  margin: 4em 0;
 }
 
 #header .heading {
-    font-size: 2em;
+  font-size: 2em;
 }
 
 #header .heading strong {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 #header .intro {
-    font-weight: 300;
-    font-size: 1.5em;
+  font-weight: 300;
+  font-size: 1.5em;
 }
 
 #header .separator {
-    margin-left: .25rem;
-    font-size: 1.5rem;
-    font-family: serif;
-    vertical-align: top;
+  margin-left: 0.25rem;
+  font-size: 1.5rem;
+  font-family: serif;
+  vertical-align: top;
 }
