--- a/styles/global.css
+++ b/styles/global.css
@@ -22,13 +22,15 @@ SIZE GUIDE
 html,
 body {
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
   color: rgb(25, 25, 25);
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
+    'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -48,7 +50,7 @@ button {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -87,3 +89,11 @@ li {
   margin-left: 1.5em;
 }
 
+#__next {
+  width: 100%;
+  height: 100%;
+  background-color: #f5f6f4;
+  display: grid;
+  justify-content: center;
+  overflow: auto;
+}
