--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -8,13 +8,13 @@
 
 /* HEADER */
 .root > header {
-  margin: 2em 0;
+  margin: auto;
   text-align: center;
 }
 
 /* CONTENT */
 .root > article {
-  margin: 3em auto 0;
+  margin: auto;
   text-align: center;
 }
 
@@ -39,4 +39,6 @@
 
 /* FOOTER */
 .root > footer {
+  margin: auto;
+  text-align: center;
 }
